modified:   CyberROAM-Client-GUI/README.md 	modified:   CyberROAM-Client-GUI/crclient.sh 	modified:   CyberROAM-Client-GUI/crclient/crclient.conf

--- a/CyberROAM-Client-GUI/crclient/crclient.conf
+++ b/CyberROAM-Client-GUI/crclient/crclient.conf
@@ -4,8 +4,8 @@ FirstTime	1
 Password	1424431816033027101124223066204051046042
 Port	6060
 SavePassword	1
-Server	<server_ip/hostname>
-User	<user.name>
+Server	"server_ip/hostname"
+User	"user.name"
 ShowNotification	0
 LiveRequestTime	180
 AlreadyLoggedIn	0
