--- a/CyberROAM-Client-GUI/crclient/crclient.conf
+++ b/CyberROAM-Client-GUI/crclient/crclient.conf
@@ -1,7 +1,7 @@
 AskonExit	0
 AutoLogin	0
 FirstTime	1
-Password	1424431816033027101124223066204051046042
+Password	
 Port	6060
 SavePassword	1
 Server	"server_ip/hostname"
